# semrunner

./: .gitignore  res_pyr_smight
fdf/: .gitignore  10-2.fdf  CMakeLists.txt  CMakeLists_copy.txt  Makefile  color.c  draw.c  drawline.c  fdf  get_proj_point.c  initialize_mlx.c  keyhook.c  legend.c  main.c  readfile.c  rotation.c  testmap1.fdf  work_todo
fdf/includes/: fdf.h
fdf/libft/: Makefile  libft_base.mk
fdf/libft/includes/: libft.h
fdf/libft/includes/printf_hdr/: ft_options.h  ft_outbuff.h  prf_double.h  prf_print_output.h
fdf/libft/sources/: ft_atoi.c  ft_bzero.c  ft_dictadd.c  ft_dictclearzero.c  ft_dictdelbykey.c  ft_dictdelelement.c  ft_dictgetoraddvalue.c  ft_dictgetvalue.c  ft_dictnew.c  ft_free.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstaddback.c  ft_lstdel.c  ft_lstdeli.c  ft_lstdelone.c  ft_lsti.c  ft_lstiter.c  ft_lstlen.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_outbuff.c  ft_outbuff_dst.c  ft_printstrsplit.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  (+35 more)
fdf/libft/sources/printf_src/: bn_round.c  change_fd.c  change_outstr.c  ft_printf.c  global_bak.c  handle_spec.c  print_output.c  spectostr_bighex.c  spectostr_bin.c  spectostr_float.c  spectostr_lowhex.c  spectostr_oct.c  spectostr_sdec.c  spectostr_udec.c
fdf/sources/: color.c  draw_surface.c  drawline.c  get_proj_point.c  initialize_mlx.c  keyhook.c  legend.c  main.c  readfile.c  rotation.c
fdf/test_maps/: error_map.fdf  testmap4x4
fdf_remake/: 10-2.fdf  CMakeLists.txt  Makefile  fdf
fdf_remake/includes/: fdf.h
fdf_remake/sources/: color.c  draw.c  draw_point.c  draw_surface.c  fdf_color.c  fdf_initialize_mlx.c  iso_transform.c  keyhook.c  make_map_points.c  readfile0.c  readfile1.c  readfile2.c  rotation.c
fdf_temp_files/: fdf_temp.c  readfile0.c  readfile1.c
fillit/: CMakeLists.txt  Makefile  author  fillit  main.c
fillit/fillit.dSYM/Contents/Resources/DWARF/: fillit
fillit/fillit_proj/: slv_auxf.c  slv_tetr.c
fillit/includes/: fillit.h  slv_tetr.h
fillit/libft/: Makefile  ft_lstappend.c  ft_strjoin.c
fillit/sources/: slv_tetr.c
fillit_git/: Makefile  fillit  map_etalon.txt
fillit_git/includes/: libft.h
fillit_git/libft/: Makefile  ft_atoi_base.c  get_next_line.c
fillit_git/old_files/: a.out  fillit.c  fillit.h  main.c  read.c
fillit_git/sources/: main.c  read.c
fillit_git2/: .Makefile.swp  Makefile  Makefile_tmp  fillit
fillit_git2/fillit_proj/: analyse.c  fillit.h  main.c  read.c  slv_tetr.c  slv_tetr.h
fillit_git2/libft/: Makefile  libft_base.mk
get_next_line/: CMakeLists.txt  get_next_line.c  get_next_line.h  main.c  test_gnl
get_next_line/libft/: Makefile  ft_bin.c  ft_dictadd.c  ft_dictgetoraddvalue.c  ft_dictnew.c  ft_isascii.c  ft_lsti.c  ft_memrealloc.c  ft_putstr_fd.c  ft_strcat.c  ft_strlen.c  ft_strncat.c  ft_strnjoin.c  libft.h
lem_in/: 111  CMakeLists.txt  Makefile  _convert_res_noz_to_z.py  ant.xpm  cachegrind.out.73068  cachegrind.out.73275  convert_fdf_to_lemin.py  fdf  lem-in_angieshu  lem-in_mschimme  lem_in  massif.out.37325  massif.out.65421  outtest  res_100_6_5  res_100_6_5000  res_copy3  res_generator  res_mars  res_ssoraka  res_test  res_valgrind  restest  run_lemin.py  testmap  testmap copy 4  testmap_copy  testmap_copy2  testmap_copy3  testmap_copy4  testmap_copy5  visu  white_ant_22_21.xpm  white_ant_43_41.xpm
lem_in/convert_fdf_to_lemin/: run_lemin.py
lem_in/env/: pyvenv.cfg
lem_in/generator/: testmap  testmap.txt
libft/: CMakeLists.txt  Makefile  main.c
libft/includes/: libft.h
libft/libft/: .Makefile.swp  Makefile
libft/libft/sources/: ft_dictnew.c  ft_isalnum.c  ft_isdigit.c  ft_isprint.c  ft_lstdelone.c  ft_lstlen.c  ft_putnbr.c  ft_strclr.c  ft_strsub.c  get_next_line.c
libft/odrinkwa/: .gitignore  CMakeLists.txt  Makefile  ft_atoi.c  ft_bzero.c  ft_lstadd.c  ft_lstmap.c  ft_memcpy.c  ft_memdel.c  ft_putchar.c  ft_putnbr_fd.c  ft_striter.c  ft_strmap.c  ft_strncpy.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strsplit.c  ft_strstr.c  ft_toupper.c  libft.h  main.c
libft/sources/: ft_dictadd.c  ft_dictdelbykey.c  ft_dictdelelement.c  ft_dictgetoraddvalue.c  ft_lstiter.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memcmp.c  ft_memmove.c  ft_printstrsplit.c  ft_putchar_fd.c  ft_putendl.c  ft_strchr.c  ft_strcmp.c  ft_strjoin.c  ft_strlcat.c  ft_strmapi.c  ft_strncmp.c  ft_strrchr.c  ft_tolower.c
printf/: CMakeLists.txt  bignum.c  bn_fix.c  bn_fstr.c  bn_init.c  bn_opers.c  bn_outp.c  bn_round.c  dbl_input.c  double.c  double.h  ft_printf.bak  ft_printf.c  ft_printf.h  main.c
printf/libft/: Makefile
printf/libft/includes/: libft.h
printf/libft/sources/: ft_atoi.c  ft_dictadd.c  ft_dictclearzero.c  ft_dictdelbykey.c  ft_dictdelelement.c  ft_dictgetvalue.c  ft_dictnew.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstdel.c  ft_lstdeli.c  ft_lstdelone.c  ft_lsti.c  ft_lstlen.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memchr.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_putendl.c  ft_putnbr.c  ft_putstr.c  ft_putstr_fd.c  ft_strclr.c  ft_strdel.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlen.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strnjoin.c  ft_strnstr.c  ft_strrchr.c  (+3 more)
printf_double/: CMakeLists.txt  bn_fix.c  bn_fstr.c  double.c  main.c
printf_double/libft/includes/: libft.h
printf_double/libft/sources/: ft_atoi.c  ft_dictgetoraddvalue.c  ft_isalnum.c  ft_isalpha.c  ft_lstiter.c  ft_memset.c  ft_putchar.c  ft_putnbr.c  ft_strcat.c  ft_strchr.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strlcat.c  ft_strmap.c  ft_strstr.c  ft_toupper.c
push_swap/: .gitignore  2  Makefile  check_list1.sh  checker  checking_stack.c  generate.py  parce_testfile.py  prog_stack1  push_swap  res10000  res2000  res_1000  res_5000  res_test_swap_10000  stack1  test10000  test111  test2000  test_stack1  test_swap_1000  test_swap_10000  test_swap_500  test_swap_5000  testfile  vizualize
test_bash/: test.sh
(+232 files in other folders)
