cmake_minimum_required(VERSION 3.14)
project(fdf C)

set(CMAKE_C_STANDARD 11)

include_directories(libft/includes)
include_directories(minilibx)
include_directories(minilibx_macos)
include_directories(/usr/lib)

add_executable(fdf
        libft/includes/libft.h
        libft/sources/ft_atoi.c
        libft/sources/ft_bzero.c
        libft/sources/ft_dictadd.c
        libft/sources/ft_dictclearzero.c
        libft/sources/ft_dictdelbykey.c
        libft/sources/ft_dictdelelement.c
        libft/sources/ft_dictgetoraddvalue.c
        libft/sources/ft_dictgetvalue.c
        libft/sources/ft_dictnew.c
        libft/sources/ft_isalnum.c
        libft/sources/ft_isalpha.c
        libft/sources/ft_isascii.c
        libft/sources/ft_isdigit.c
        libft/sources/ft_isprint.c
        libft/sources/ft_itoa.c
        libft/sources/ft_lstadd.c
        libft/sources/ft_lstaddback.c
        libft/sources/ft_lstdel.c
        libft/sources/ft_lstdeli.c
        libft/sources/ft_lstdelone.c
        libft/sources/ft_lsti.c
        libft/sources/ft_lstiter.c
        libft/sources/ft_lstlen.c
        libft/sources/ft_lstmap.c
        libft/sources/ft_lstnew.c
        libft/sources/ft_memalloc.c
        libft/sources/ft_memccpy.c
        libft/sources/ft_memchr.c
        libft/sources/ft_memcmp.c
        libft/sources/ft_memcpy.c
        libft/sources/ft_memdel.c
        libft/sources/ft_memmove.c
        libft/sources/ft_memset.c
        libft/sources/ft_printstrsplit.c
        libft/sources/ft_putchar.c
        libft/sources/ft_putchar_fd.c
        libft/sources/ft_putendl.c
        libft/sources/ft_putendl_fd.c
        libft/sources/ft_putnbr.c
        libft/sources/ft_putnbr_fd.c
        libft/sources/ft_putstr.c
        libft/sources/ft_putstr_fd.c
        libft/sources/ft_strcat.c
        libft/sources/ft_strchr.c
        libft/sources/ft_strclr.c
        libft/sources/ft_strcmp.c
        libft/sources/ft_strcpy.c
        libft/sources/ft_strdel.c
        libft/sources/ft_strdup.c
        libft/sources/ft_strequ.c
        libft/sources/ft_striter.c
        libft/sources/ft_striteri.c
        libft/sources/ft_strjoin.c
        libft/sources/ft_strlcat.c
        libft/sources/ft_strlen.c
        libft/sources/ft_strmap.c
        libft/sources/ft_strmapi.c
        libft/sources/ft_strncat.c
        libft/sources/ft_strncmp.c
        libft/sources/ft_strncpy.c
        libft/sources/ft_strnequ.c
        libft/sources/ft_strnew.c
        libft/sources/ft_strnjoin.c
        libft/sources/ft_strnstr.c
        libft/sources/ft_strrchr.c
        libft/sources/ft_strsplit.c
        libft/sources/ft_strstr.c
        libft/sources/ft_strsub.c
        libft/sources/ft_strtrim.c
        libft/sources/ft_tolower.c
        libft/sources/ft_toupper.c
        libft/sources/get_next_line.c
        minilibx/test/main.c
        minilibx/test/new_win.c
        minilibx/mlx.h
        minilibx/mlx_clear_window.c
        minilibx/mlx_destroy_image.c
        minilibx/mlx_destroy_window.c
        minilibx/mlx_expose_hook.c
        minilibx/mlx_flush_event.c
        minilibx/mlx_get_color_value.c
        minilibx/mlx_get_data_addr.c
        minilibx/mlx_hook.c
        minilibx/mlx_init.c
        minilibx/mlx_int.h
        minilibx/mlx_int_anti_resize_win.c
        minilibx/mlx_int_do_nothing.c
        minilibx/mlx_int_get_visual.c
        minilibx/mlx_int_param_event.c
        minilibx/mlx_int_set_win_event_mask.c
        minilibx/mlx_int_str_to_wordtab.c
        minilibx/mlx_int_wait_first_expose.c
        minilibx/mlx_key_hook.c
        minilibx/mlx_lib_xpm.c
        minilibx/mlx_loop.c
        minilibx/mlx_loop_hook.c
        minilibx/mlx_mouse_hook.c
        minilibx/mlx_new_image.c
        minilibx/mlx_new_window.c
        minilibx/mlx_pixel_put.c
        minilibx/mlx_put_image_to_window.c
        minilibx/mlx_rgb.c
        minilibx/mlx_string_put.c
        minilibx/mlx_xpm.c
        minilibx_macos/font.c
        minilibx_macos/mlx.h
        minilibx_macos/mlx_init_loop.m
        minilibx_macos/mlx_int.h
        minilibx_macos/mlx_int_str_to_wordtab.c
        minilibx_macos/mlx_new_image.m
        minilibx_macos/mlx_new_window.h
        minilibx_macos/mlx_new_window.m
        minilibx_macos/mlx_rgb.c
        minilibx_macos/mlx_shaders.c
        minilibx_macos/mlx_xpm.c
        main.c)
